# imagin3d

./: .gitignore  CMakeLists.txt  checklist.md
src/: main.cpp
src/lib/Canvas/: Canvas.cpp  Canvas.h
src/lib/Cone/: Cone.cpp  Cone.h
src/lib/Cube/: Cube.cpp  Cube.h
src/lib/Cylinder/: Cylinder.cpp  Cylinder.h
src/lib/Math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/lib/Mesh/: Mesh.cpp  Mesh.h
src/lib/Object/: Colors.h  Object.h  ObjectMaterial.h  ObjectType.h
src/lib/Plane/: Plane.cpp  Plane.h  PlaneTexture.cpp  PlaneTexture.h  Textures.h
src/lib/PolygonMesh/: PolygonMesh.cpp  PolygonMesh.h
src/lib/Scene/: Parameters.h  Scene.cpp  Scene.h
src/lib/Sphere/: Sphere.cpp  Sphere.h
src/lib/Transformable/: Shear.h  Transformable.cpp  Transformable.h
src/lib/Transformer/: Transformer.cpp  Transformer.h
src/lib/Triangle/: Triangle.cpp  Triangle.h
src/lib/VectorRay/: VectorRay.cpp  VectorRay.h
